1.15.1
---
- Fix corner case in HTTP communication with missing path in Location header (bug 187).

1.15.0
---
- Added --continue (also see scripts/conplay).
- Added number row to terminal control keys for 10% jump points (for navigating long tracks).
- Set xterm title always if asked, disregarding the -q switch (if you want fully quiet, don't specify --title).
- Enable terminal mode in OS/2 by explicitly checking for and using os2term library.
- Getting WAV/AU/CDR writing back to a sane state while still catching out-of-disk when writing headers (none in case of CDR) but removing that initial test that prevented writing on any non-seekable file (like, /dev/stdout to a pipe).
- Added native audio output for QNX (thanks to Mike Gorchak), also improving portability of configure script while at that.
- more robust recovery from ALSA issues (device suspend)
- Fix crash in module loader on *BSD.
- Extend time display to switch to hours above 60 minutes (hh:mm:ss, ditching the sub-second precision)
- really include dithering in default x86-64 build.
- Fix mpg123_scan() not properly seeking back for all types of files (bug 3582628 ... it got a different number on sf.net now ... brilliant, folks!).
- Prevent false positives for "Frankenstein!" when using mpg123_scan().
- Fix printing of negative positions with buffer (bug 186).
- Accept application/x-scpls as additional MIME type.
- Try to handle certain Windows toolchains that miss EOVERFLOW.

1.14.4
---

Who reworks a parsing and data mangling without really making sure that things still work like before? I hope I won't do so in future. Not again.

- Fix resync logic to properly work again (used to prematurely end stream on bad headers). A regression again, this sucks, but at least we got a regression test for that now.
- Fix aeon-old regression (since 1.11.0) about short seeks: Bit reservoir was reset also for short seeks that did not break continuity.